# rust-pyn5

./: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.rst  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.rst  bumpversion.cfg  input.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  publish.yaml
ci/travis/: build-wheels.sh  build.sh  setup.sh  setup_rust.sh  test.sh
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pyn5/: __init__.py  attributes.py  common.py  dataset.py  file_group.py  python_wrappers.py
python/pyn5/: attributes.py  dataset.py  file_group.py
src/: lib.rs
tests/: __init__.py  common.py  conftest.py  test.py  test_h5_like.py  test_pyn5.py
