[package]
name = "pyn5"
version = "0.1.0"
authors = ["pattonw <pattonw@hhmi.org>"]

[lib]
name = "pyn5"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.6.0-alpha.4", features = ["extension-module"] }
n5 = { version = "0.4", default-features = false, features = ["filesystem", "gzip", "use_ndarray"]}
