[package]
name = "pyn5"
version = "0.1.0"
authors = ["pattonw <pattonw@hhmi.org>"]

[lib]
name = "pyn5"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.7", features = ["extension-module"] }
n5 = { version = "0.4", default-features = false, features = ["filesystem", "bzip", "gzip", "lz", "xz", "use_ndarray"]}
numpy = "0.6"
serde_json = "1.0.39"
