[package]
name = "pyn5"
version = "1.0.1"
authors = ["pattonw <pattonw@hhmi.org>"]
description = "Python wrapper around rust-n5."
readme = "README.rst"
license = "MIT"
repository = "https://github.com/pattonw/rust-pyn5"
homepage = "https://github.com/pattonw/rust-pyn5"
documentation = "https://rust-pyn5.readthedocs.io"

[package.metadata.maturin]
classifier = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
requires-dist = ["numpy", "h5py_like>=0.6.0"]
requires-python = ">=3.6"

[badges]
travis-ci = { repository = "pattonw/rust-pyn5" }

[lib]
name = "pyn5"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.8", features = ["extension-module"] }
# liblzma breaks manylinux compatibility
# n5 = { version = "0.4", default-features = false, features = ["filesystem", "bzip", "gzip", "lz", "xz", "use_ndarray"]}
n5 = { version = "0.4", default-features = false, features = ["filesystem", "bzip", "gzip", "use_ndarray"]}
numpy = "0.7"
serde_json = "1.0.39"
